<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preference_category_miscellaneous">
        <SwitchPreference
            android:defaultValue="false"
            android:key="battlyOfflineMode"
            android:summary="@string/preference_offline_mode_description"
            android:title="@string/preference_offline_mode_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_setting_hash_verification"
            android:key="checkLibraries"
            android:summary="@string/mcl_setting_check_libraries_subtitle"
            android:title="@string/mcl_setting_check_libraries" />
        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:defaultValue="64"
            android:key="downloadThreadCount"
            android:max="@integer/download_threads_seekbar_max"
            android:summary="@string/preference_download_threads_description"
            android:title="@string/preference_download_threads_title"
            app2:min="@integer/download_threads_seekbar_min"
            app2:seekBarIncrement="@integer/download_threads_seekbar_increment"
            app2:showSeekBarValue="true" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="arc_capes"
            android:summary="@string/arc_capes_desc"
            android:title="@string/arc_capes_title" />
        <Preference
            android:icon="@drawable/minecraft_filled_map"
            android:fragment="net.kdt.pojavlaunch.fragments.BackgroundSettingsFragment"
            android:key="select_battly_background"
            android:summary="@string/battly_background_settings_summary"
            android:title="@string/battly_background_settings_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="verifyManifest"
            android:title="@string/preference_verify_manifest_title"
            android:summary="@string/preference_verify_manifest_description"/>

        <SwitchPreference
            android:defaultValue="false"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"/>

    </PreferenceCategory>

</PreferenceScreen>
