<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_ctrl_add"
        android:title="@string/customctrl_addbutton"/>

    <item
        android:id="@+id/menu_ctrl_add_drawer"
        android:title="@string/customctrl_addbutton_drawer"/>

    <item
        android:id="@+id/menu_ctrl_add_performance"
        android:title="@string/customctrl_performance_widget"/>

    <item
        android:id="@+id/menu_ctrl_add_device_image"
        android:title="@string/customctrl_device_image_add"/>

    <item
        android:id="@+id/menu_ctrl_load"
        android:title="@string/global_load"/>

    <item
        android:id="@+id/menu_ctrl_save"
        android:title="@string/global_save"/>

    <item
        android:id="@+id/menu_ctrl_selectdefault"
        android:title="@string/customctrl_selectdefault"/>
</menu>
