<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/preference_renderer_mobileglues_settings" android:icon="@drawable/ic_mg_renderer">
        <Preference
            android:key="mg_renderer_benchmark"
            android:title="@string/mg_benchmark_title"
            android:summary="@string/mg_benchmark_summary"
            android:icon="@drawable/ic_mg_renderer" />
        <EditTextPreference
            android:title="@string/mg_renderer_glsl_cache"
            android:key="mg_renderer_setting_glsl_cache_size"
            android:inputType="number"
            android:defaultValue="128" />
        <androidx.preference.ListPreference
            android:title="@string/mg_renderer_angle"
            android:key="mg_renderer_setting_angle"
            android:defaultValue="1"
            android:entries="@array/mg_renderer_names_angle"
            android:entryValues="@array/mg_renderer_values_angle"
            app2:useSimpleSummaryProvider="true"/>
        <androidx.preference.ListPreference
            android:title="@string/mg_renderer_multidraw_order"
            android:summary="@string/mg_renderer_multidraw_order_summary"
            android:key="mg_renderer_multidraw_order"
            android:defaultValue=""
            android:entries="@array/mg_renderer_names_multidraw_order"
            android:entryValues="@array/mg_renderer_values_multidraw_order"
            app2:useSimpleSummaryProvider="true"/>
        <androidx.preference.ListPreference
            android:title="@string/mg_renderer_title_fsr"
            android:key="mg_renderer_setting_fsr"
            android:defaultValue="0"
            android:entries="@array/mg_renderer_names_fsr"
            android:entryValues="@array/mg_renderer_values_fsr"
            app2:useSimpleSummaryProvider="true"/>
        <androidx.preference.ListPreference
            android:title="@string/mg_renderer_title_errorSetting"
            android:key="mg_renderer_setting_errorSetting"
            android:defaultValue="0"
            android:entries="@array/mg_renderer_names_errorSetting"
            android:entryValues="@array/mg_renderer_values_errorSetting"
            app2:useSimpleSummaryProvider="true"/>
        <SwitchPreference
            android:title="@string/mg_renderer_title_timerQueryExt"
            android:summary="@string/mg_renderer_summary_timerQueryExt"
            android:key="mg_renderer_setting_timerQueryExt"
            android:defaultValue="false" />
        <PreferenceCategory android:title="@string/preference_ANGLE_only">
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_title_angleDepthClearFixMode"
                android:summary="@string/mg_renderer_summary_angleDepthClearFixMode"
                android:key="mg_renderer_setting_angleDepthClearFixModeV2"
                android:defaultValue="0"
                android:entries="@array/mg_renderer_names_depth_clear"
                android:entryValues="@array/mg_renderer_values_depth_clear"
                app2:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/mg_renderer_multidraw_per_function">
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_multidraw_arrays"
                android:key="mg_renderer_multidraw_arrays"
                android:defaultValue=""
                android:entries="@array/mg_renderer_names_md_arrays"
                android:entryValues="@array/mg_renderer_values_md_arrays"
                app2:useSimpleSummaryProvider="true" />
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_multidraw_elements"
                android:key="mg_renderer_multidraw_elements"
                android:defaultValue=""
                android:entries="@array/mg_renderer_names_md_elements"
                android:entryValues="@array/mg_renderer_values_md_elements"
                app2:useSimpleSummaryProvider="true" />
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_multidraw_base_vertex"
                android:key="mg_renderer_multidraw_elements_base_vertex"
                android:defaultValue=""
                android:entries="@array/mg_renderer_names_md_base_vertex"
                android:entryValues="@array/mg_renderer_values_md_base_vertex"
                app2:useSimpleSummaryProvider="true" />
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_multidraw_arrays_indirect"
                android:key="mg_renderer_multidraw_arrays_indirect"
                android:defaultValue=""
                android:entries="@array/mg_renderer_names_md_indirect"
                android:entryValues="@array/mg_renderer_values_md_indirect"
                app2:useSimpleSummaryProvider="true" />
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_multidraw_elements_indirect"
                android:key="mg_renderer_multidraw_elements_indirect"
                android:defaultValue=""
                android:entries="@array/mg_renderer_names_md_indirect"
                android:entryValues="@array/mg_renderer_values_md_indirect"
                app2:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/preference_experimental_title">
            <SwitchPreference
                android:title="@string/mg_renderer_title_gl43exts"
                android:summary="@string/mg_renderer_summary_gl43exts"
                android:key="mg_renderer_setting_gl43exts"
                android:defaultValue="false" />
            <SwitchPreference
                android:title="@string/mg_renderer_title_computeShaderext"
                android:summary="@string/mg_renderer_summary_computeShaderext"
                android:key="mg_renderer_computeShaderext"
                android:defaultValue="false" />
            <SwitchPreference
                android:title="@string/mg_renderer_title_dsaExt"
                android:summary="@string/mg_renderer_summary_dsaExt"
                android:key="mg_renderer_dsaExt"
                android:defaultValue="false" />
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_custom_gl_version"
                android:key="mg_renderer_custom_gl_version"
                android:defaultValue="0"
                android:entries="@array/mg_renderer_names_gl_version"
                android:entryValues="@array/mg_renderer_values_gl_version"
                app2:useSimpleSummaryProvider="true" />
            <androidx.preference.ListPreference
                android:title="@string/mg_renderer_hide_environment"
                android:summary="@string/mg_renderer_hide_environment_summary"
                android:key="mg_renderer_hide_environment"
                android:defaultValue="0"
                android:entries="@array/mg_renderer_names_hide_environment"
                android:entryValues="@array/mg_renderer_values_hide_environment"
                app2:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>
